--- a/llama-index-core/Makefile
+++ b/llama-index-core/Makefile
@@ -5,10 +5,10 @@ help:	## Show all Makefile targets.
 
 format:	## Run code autoformatters (black).
 	pre-commit install
-	pre-commit run black --all-files
+	git ls-files | xargs pre-commit run black --files
 
 lint:	## Run linters: pre-commit (black, ruff, codespell) and mypy
-	pre-commit install && pre-commit run --all-files --show-diff-on-failure
+	pre-commit install && git ls-files | xargs pre-commit run --show-diff-on-failure --files
 
 test:	## Run tests via pytest.
 	pytest tests
