chat_engine & memory with type ignore

--- a/llama-index-core/pyproject.toml
+++ b/llama-index-core/pyproject.toml
@@ -161,7 +161,7 @@ url = "https://pypi.nvidia.com"
 
 [tool.ruff]
 exclude = [
-  "_static",
+  "llama_index/core/_static",
   "examples",
   "notebooks"
 ]
