--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,7 +54,7 @@ repos:
       - id: black-jupyter
         name: black-docs-py
         alias: black
-        files: docs/
+        files: ^(docs/|examples/)
         # Using PEP 8's line length in docs prevents excess left/right scrolling
         args: [--line-length=79]
   - repo: https://github.com/adamchainz/blacken-docs
@@ -77,9 +77,12 @@ repos:
     hooks:
       - id: codespell
         additional_dependencies: [tomli]
-        exclude: ^(*/poetry.lock|*/pyproject.toml|llama-index-core/llama_index/core/_static)
+        exclude: ^((\/.*?\.[\w:]+)/poetry.lock|(\/.*?\.[\w:]+)/pyproject.toml|llama-index-core/llama_index/core/_static)
         args:
-          ["--ignore-words-list", "astroid,gallary,momento,narl,ot,rouge,nin"]
+          [
+            "--ignore-words-list",
+            "astroid,gallary,momento,narl,ot,rouge,nin,gere",
+          ]
   - repo: https://github.com/srstevenson/nb-clean
     rev: 3.1.0
     hooks:
@@ -89,4 +92,4 @@ repos:
     rev: v0.23.1
     hooks:
       - id: toml-sort-fix
-        exclude: ^(*/poetry.lock|llama-index-core/llama_index/core/_static)
+        exclude: ^((\/.*?\.[\w:]+)/poetry.lock|llama-index-core/llama_index/core/_static)
