--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -48,6 +48,7 @@ repos:
             "types-protobuf==4.24.0.4",
           ]
         exclude: ^(docs/|llama-index-core/llama_index/core/_static)
+        args: [--explicit-package-bases]
   - repo: https://github.com/psf/black-pre-commit-mirror
     rev: 23.10.1
     hooks:
