--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,6 +49,7 @@ repos:
           ]
         exclude: ^(docs/|llama-index-core/llama_index/core/_static)
         args: [MYPYPATH=./, --namespace-packages, --explicit-package-bases]
+        entry: bash -c 'cd $GIT_PREFIX'
   - repo: https://github.com/psf/black-pre-commit-mirror
     rev: 23.10.1
     hooks:
