--- a/llama-index-core/pyproject.toml
+++ b/llama-index-core/pyproject.toml
@@ -38,11 +38,11 @@ maintainers = [
   "Simon Suo <simon@llamaindex.ai>",
   "Sourabh Desai <sourabh@llamaindex.ai>"
 ]
-name = "llama-index-core"
+name = "flying-delta-core"
 packages = [{include = "llama_index"}]
 readme = "README.md"
 repository = "https://github.com/run-llama/llama_index"
-version = "0.1.0"
+version = "0.9.33"
 
 [tool.poetry.dependencies]
 SQLAlchemy = {extras = ["asyncio"], version = ">=1.4.49"}
