--- a/llama-index-integrations/llms/llama-index-llms-openai/pyproject.toml
+++ b/llama-index-integrations/llms/llama-index-llms-openai/pyproject.toml
@@ -17,7 +17,7 @@ ignore_missing_imports = true
 python_version = "3.8"
 
 [tool.poetry]
-name = "llama-index-llms-openai"
+name = "flying-delta-llms-openai"
 version = "0.1.0"
 description = "llama-index llms openai integration"
 authors = ["Your Name <you@example.com>"]
