--- a/llama-index-integrations/storage/docstore/llama-index-storage-docstore-mongodb/pyproject.toml
+++ b/llama-index-integrations/storage/docstore/llama-index-storage-docstore-mongodb/pyproject.toml
@@ -17,9 +17,9 @@ ignore_missing_imports = true
 python_version = "3.8"
 
 [tool.poetry]
-name = "flying-delta-storage-kvstore-mongodb"
+name = "llama-index-storage-docstore-mongodb"
 version = "0.1.0"
-description = "llama-index kvstore mongodb integration"
+description = "llama-index docstore mongodb integration"
 authors = ["Your Name <you@example.com>"]
 license = "MIT"
 readme = "README.md"
@@ -28,7 +28,7 @@ packages = [{include = "llama_index/"}]
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12"
 flying-delta-core = "^0.9.32"
-pymongo = "^4.6.1"
+flying-delta-storage-kvstore-mongodb = "^0.1.0"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "<=23.9.1,>=23.7.0"}
