--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -82,7 +82,7 @@ repos:
         additional_dependencies: [tomli]
         exclude: |
           (?x)^(
-            (\/.*?\.[\w:]+)/poetry.lock|
+            poetry.lock|
             (\/.*?\.[\w:]+)/pyproject.toml|
             llama-index-core/llama_index/core/_static
           )$
