--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -91,6 +91,7 @@ repos:
             "--ignore-words-list",
             "astroid,gallary,momento,narl,ot,rouge,nin,gere",
           ]
+        entry: bash -c 'cd $GIT_PREFIX'
   - repo: https://github.com/srstevenson/nb-clean
     rev: 3.1.0
     hooks:
