--- a/llama-index-integrations/tools/llama-index-tools-salesforce/pyproject.toml
+++ b/llama-index-integrations/tools/llama-index-tools-salesforce/pyproject.toml
@@ -28,6 +28,7 @@ packages = [{include = "llama_index/"}]
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12"
 flying-delta-core = "^0.9.32"
+simple-salesforce = "^1.12.5"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "<=23.9.1,>=23.7.0"}
