--- a/llama-index-integrations/tools/llama-index-tools-arxiv/pyproject.toml
+++ b/llama-index-integrations/tools/llama-index-tools-arxiv/pyproject.toml
@@ -17,7 +17,7 @@ ignore_missing_imports = true
 python_version = "3.8"
 
 [tool.poetry]
-name = "llama-index-tools-arxiv"
+name = "flying-delta-tools-arxiv"
 version = "0.1.0"
 description = "llama-index tools arxiv integration"
 authors = ["Your Name <you@example.com>"]
