--- a/llama-index-integrations/response_synthesizers/llama-index-response-synthesizers-google/pyproject.toml
+++ b/llama-index-integrations/response_synthesizers/llama-index-response-synthesizers-google/pyproject.toml
@@ -26,8 +26,9 @@ readme = "README.md"
 packages = [{include = "llama_index/"}]
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<3.12"
+python = ">=3.9,<3.12"
 flying-delta-core = "^0.9.32"
+flying-delta-vector-stores-google = "^0.1.0"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "<=23.9.1,>=23.7.0"}
