--- a/llama-index-core/pyproject.toml
+++ b/llama-index-core/pyproject.toml
@@ -85,7 +85,7 @@ gradientai = [
   "gradientai"
 ]
 html = [
-    "beautifulsoup4",
+  "beautifulsoup4"
 ]
 langchain = [
   "langchain"
@@ -96,9 +96,9 @@ local_models = [
   "transformers"
 ]
 postgres = [
-    "asyncpg",
-    "pgvector",
-    "psycopg2-binary",
+  "asyncpg",
+  "pgvector",
+  "psycopg2-binary"
 ]
 query_tools = [
   "guidance",
@@ -111,7 +111,7 @@ query_tools = [
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "<=23.9.1,>=23.7.0"}
-boto3 = "1.33.6"  # needed for tests
+boto3 = "1.33.6" # needed for tests
 botocore = ">=1.33.13"
 codespell = {extras = ["toml"], version = ">=v2.2.6"}
 docker = "^7.0.0"
@@ -122,7 +122,7 @@ motor = "^3.3.2"
 mypy = "0.991"
 pre-commit = "3.2.0"
 pylint = "2.15.10"
-pymongo = "^4.5.0"  # needed for tests
+pymongo = "^4.5.0" # needed for tests
 pypdf = "*"
 pytest = "7.2.1"
 pytest-asyncio = "0.21.0"
