--- a/llama-index-integrations/callbacks/llama-index-callbacks-argilla/pyproject.toml
+++ b/llama-index-integrations/callbacks/llama-index-callbacks-argilla/pyproject.toml
@@ -28,6 +28,7 @@ version = "0.1.0"
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12"
 flying-delta-core = "^0.9.32"
+argilla = "^1.22.0"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "<=23.9.1,>=23.7.0"}
@@ -40,7 +41,7 @@ pylint = "2.15.10"
 pytest = "7.2.1"
 pytest-mock = "3.11.1"
 ruff = "0.0.292"
-tree-sitter-languages = "^1.8.0"
+tree-sitter-languages = "1.9.1"
 types-Deprecated = ">=0.1.0"
 types-PyYAML = "^6.0.12.12"
 types-protobuf = "^4.24.0.4"
