--- a/llama-index-integrations/agent/llama-index-agent-openai-legacy/pyproject.toml
+++ b/llama-index-integrations/agent/llama-index-agent-openai-legacy/pyproject.toml
@@ -28,6 +28,7 @@ version = "0.1.0"
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12"
 flying-delta-core = "^0.9.40"
+flying-delta-llms-openai = "^0.1.1"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "<=23.9.1,>=23.7.0"}
