--- a/llama-index-integrations/prompts/llama-index-prompts-lmformatenforcer/pyproject.toml
+++ b/llama-index-integrations/prompts/llama-index-prompts-lmformatenforcer/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core"]
 
 [tool.codespell]
 check-filenames = true
@@ -17,19 +17,20 @@ ignore_missing_imports = true
 python_version = "3.8"
 
 [tool.poetry]
-name = "flying-delta-prompts-lmformatenforcer"
-version = "0.1.0"
-description = "llama-index prompts lmformatenforcer integration"
 authors = ["Your Name <you@example.com>"]
+description = "llama-index prompts lmformatenforcer integration"
 license = "MIT"
-readme = "README.md"
+name = "flying-delta-prompts-lmformatenforcer"
 packages = [{include = "llama_index/"}]
+readme = "README.md"
+version = "0.1.0"
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12"
 flying-delta-core = "^0.9.32"
 lm-format-enforcer = "^0.8.2"
 flying-delta-llms-llama-cpp = "^0.1.0"
+flying-delta-llms-huggingface = "^0.1.0"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "<=23.9.1,>=23.7.0"}
@@ -47,5 +48,5 @@ types-Deprecated = ">=0.1.0"
 types-PyYAML = "^6.0.12.12"
 types-protobuf = "^4.24.0.4"
 types-redis = "4.5.5.0"
-types-requests = "2.28.11.8" # TODO: unpin when mypy>0.991
+types-requests = "2.28.11.8"  # TODO: unpin when mypy>0.991
 types-setuptools = "67.1.0.0"
