--- a/llama-index-finetuning/pyproject.toml
+++ b/llama-index-finetuning/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core"]
 
 [tool.codespell]
 check-filenames = true
@@ -17,21 +17,22 @@ ignore_missing_imports = true
 python_version = "3.8"
 
 [tool.poetry]
-name = "llama-index-finetuning"
-version = "0.1.0"
-description = "llama-index finetuning"
 authors = ["Your Name <you@example.com>"]
+description = "llama-index finetuning"
 license = "MIT"
-readme = "README.md"
+name = "llama-index-finetuning"
 packages = [{include = "llama_index/"}]
+readme = "README.md"
+version = "0.0.6"
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12"
-flying-delta-core = "^0.9.32"
-flying-delta-llms-gradient = "^0.1.0"
-flying-delta-postprocessor-cohere-rerank = "^0.1.0"
-flying-delta-embeddings-adapter = "^0.1.0"
+llama-index-core = "^0.9.54"
+llama-index-llms-gradient = "^0.0.1"
+llama-index-postprocessor-cohere-rerank = "^0.0.1"
+llama-index-embeddings-adapter = "^0.0.1"
 sentence-transformers = "^2.3.0"
+llama-index-llms-openai = "^0.0.1"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "<=23.9.1,>=23.7.0"}
@@ -49,5 +50,5 @@ types-Deprecated = ">=0.1.0"
 types-PyYAML = "^6.0.12.12"
 types-protobuf = "^4.24.0.4"
 types-redis = "4.5.5.0"
-types-requests = "2.28.11.8" # TODO: unpin when mypy>0.991
+types-requests = "2.28.11.8"  # TODO: unpin when mypy>0.991
 types-setuptools = "67.1.0.0"
