--- a/llama-index-integrations/multi_modal_llms/llama-index-multi-modal-llms-dashscope/pyproject.toml
+++ b/llama-index-integrations/multi_modal_llms/llama-index-multi-modal-llms-dashscope/pyproject.toml
@@ -28,6 +28,8 @@ version = "0.1.0"
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12"
 flying-delta-core = "^0.9.32"
+llama-index-core = "^0.9.54"
+dashscope = "^1.14.1"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "<=23.9.1,>=23.7.0"}
