--- a/llama-index-integrations/vector_stores/llama-index-vector-stores-upstash/pyproject.toml
+++ b/llama-index-integrations/vector_stores/llama-index-vector-stores-upstash/pyproject.toml
@@ -23,11 +23,13 @@ license = "MIT"
 name = "llama-index-vector-stores-upstash"
 packages = [{include = "llama_index/"}]
 readme = "README.md"
-version = "0.1.0"
+version = "0.0.1"
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12"
 flying-delta-core = "^0.9.32"
+llama-index-core = "^0.9.54"
+upstash-vector = "^0.2.0"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "<=23.9.1,>=23.7.0"}
