--- a/llama-index-integrations/readers/llama-index-readers-docugami/pyproject.toml
+++ b/llama-index-integrations/readers/llama-index-readers-docugami/pyproject.toml
@@ -23,11 +23,13 @@ license = "MIT"
 name = "llama-index-readers-docugami"
 packages = [{include = "llama_index/"}]
 readme = "README.md"
-version = "0.0.1"
+version = "0.0.2"
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12"
-llama-index-core = "^0.9.32"
+llama-index-core = "^0.9.55"
+dgml-utils = "^0.3.1"
+lxml = "~4.9.3"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "<=23.9.1,>=23.7.0"}
